--- a/git.html
+++ b/git.html
@@ -12,5 +12,8 @@
     <p>
         JA RASTAFARAYE
     </p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi quo a, officia perferendis consectetur rerum officiis eligendi commodi tempore nesciunt. Dignissimos ullam nisi esse nostrum, nulla aliquid quo suscipit placeat.
+    </p>
 </body>
 </html>
