fin du site internet

--- a/git.html
+++ b/git.html
@@ -16,5 +16,7 @@
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi quo a, officia perferendis consectetur rerum officiis eligendi commodi tempore nesciunt. Dignissimos ullam nisi esse nostrum, nulla aliquid quo suscipit placeat.
     </p>
+
+    <!--Fin du site internet-->
 </body>
 </html>
